--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Configuration"]
 	path = Configuration
-	url = https//github.com/jspahrsummers/xcconfigs.git
+	url = https://github.com/jspahrsummers/xcconfigs.git
